<resources>
    <string name="app_name">Emplea</string>
    <string name="ingresar">Ingresar</string>
    <string name="emplea">EMPLEA</string>
    <string name="oficina">Oficina</string>
    <string name="ingenieria">Ingenieria</string>
    <string name="informatica">Informatica</string>
    <string name="medicina">Medicina</string>
    <string name="construccion">Construccion</string>
    <string name="ventas">Ventas</string>
    <string name="postularme">Postularme</string>
    <string name="registro_de_usuario">Registro de Usuario</string>
    <string name="subir_foto">Subir Foto</string>
    <string name="curriculum">Curriculum</string>
    <string name="title_activity_menu">menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="nombre_de_la_persona">Nombre de la persona</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ofertas">Ofertas:</string>
    <string name="registro_de_empresa">REGISTRO DE EMPRESA</string>
    <string name="nueva_oferta">NUEVA OFERTA</string>
    <string name="publicar">PUBLICAR</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="txt_titulo">TITULO</string>
    <string name="btn_Aplicar">VER</string>
    <string name="ubicacion">Santa Ana</string>
    <string name="todo">TODO</string>
    <string name="empresa">Empresa</string>
    <string name="fecha">12/11/2023</string>
    <string name="ubi">TODO</string>
    <string name="construcci_n">Construcción</string>
    <string name="cat_informatica">Informatica</string>
    <string name="enviar">Enviar</string>
    <string name="logo">logo</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrar">Registrar</string>
    <string name="imagenlogoreg">imagenlogoreg</string>
    <string name="rdbempresa">Empresa</string>
    <string name="usuario">Usuario</string>
    <string name="mis_postulaciones">Mis Postulaciones</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="nueva_oferta1">Nueva Oferta</string>
    <string name="ingrese_nombre_de_la_empresa">Ingrese nombre de la empresa</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="telefono">Telefono</string>
    <string name="ubicacion_de_la_empresa">Ubicacion de la empresa</string>
    <string name="password">Password</string>
    <string name="confirmar_password">Confirmar Password</string>
    <string name="registrar1">REGISTRAR</string>
    <string name="empresa1">EMPRESA</string>
    <string name="personal1">PERSONAL</string>
    <string name="mis_postulaciones1">Mis Postulaciones</string>
    <string name="todo1">TODO</string>
    <string name="ingrese_nombre_de_la_oferta">Ingrese nombre de la oferta</string>
    <string name="describa_toda_la_descripcion_de_la_oferta">Describa toda la descripcion de la oferta</string>
    <string name="fecha_de_cierre">Fecha de Cierre</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo5">TODO</string>
    <string name="ajustes">Ajustes</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="mis_postulaciones2">Mis postulaciones</string>
    <string name="inicio">Inicio</string>
    <string name="salir">Salir</string>
    <string name="notificaciones">Notificaciones</string>

</resources>