<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondologin"
    android:orientation="vertical"
    >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="167dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_weight="1"
            tools:ignore="InefficientWeight,NestedWeights"

            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            app:cardCornerRadius="85dp"
            app:cardElevation="5dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo"
                android:src="@drawable/letralogo2"></ImageView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    <TextView
        android:id="@+id/txterror_message"
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="asdasd"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:background="@color/error"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        >

    </TextView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:ignore="UselessLeaf"
        android:paddingStart="50dp"
        android:paddingEnd="50dp">


        <EditText
            android:id="@+id/txtusuario"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize"
            android:drawableStart="@drawable/baseline_people_alt_24"
            android:drawablePadding="5dp"
            android:inputType="textAutoComplete"
            android:autofillHints="username" />

        <EditText
            android:id="@+id/txtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:minHeight="48dp"
            tools:ignore="VisualLintTextFieldSize"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="5dp"
            android:autofillHints="password" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="60dp"
            android:layout_marginTop="50dp"
            android:text="@string/btnIngresar"
            android:textSize="20sp"
            app:cornerRadius="4dp"
            android:elevation="4dp"
            tools:ignore="VisualLintButtonSize"
            android:backgroundTint="#3d98d3"
            android:padding="20dp"
            android:onClick="Entrar">
        </Button>




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="20dp"
            android:backgroundTint="@color/white"
            android:drawableStart="@android:drawable/ic_input_add"
            android:drawableTint="#3d98d3"
            android:elevation="4dp"
            android:gravity="end"
            android:minHeight="48dp"
            android:onClick="registrarse"
            android:padding="20dp"
            android:text="@string/registrarse"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            app:cornerRadius="4dp"
            app:iconSize="30dp"
            app:iconTint="#3d98d3"
            tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />
    </LinearLayout>



</LinearLayout>