<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Nueva_Oferta">

    <LinearLayout
        android:id="@+id/encabezado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:id="@+id/contenido_categorias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints,UselessParent">

            <ImageButton
                android:id="@+id/icomenu"
                android:layout_width="50dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/todo3"
                android:onClick="menu"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                app:srcCompat="@drawable/menu"
                tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck,MissingConstraints,RtlHardcoded,TouchTargetSizeCheck" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="2dp"
                android:layout_toEndOf="@id/icomenu"
                android:layout_toRightOf="@id/icomenu"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="@font/alfa_slab_one"
                        android:text="@string/nueva_oferta"
                        android:textColor="#298DD0"
                        android:textSize="16sp"
                        tools:ignore="MissingConstraints,TextContrastCheck" />

                    <ImageButton
                        android:id="@+id/btnAtras"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:layout_gravity="center"
                        android:layout_marginLeft="180dp"
                        android:contentDescription="@string/todo2"

                        android:src="@drawable/atras"
                        tools:ignore="DuplicateSpeakableTextCheck,RtlHardcoded,TouchTargetSizeCheck" />
                </LinearLayout>


                <View
                    android:id="@+id/linea1"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:background="@drawable/linea"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="0dp" />

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
    <RelativeLayout
        android:id="@+id/imgnuevaoferta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/encabezado"
        android:gravity="center">
        <ImageView
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:foregroundGravity="center"
            android:src="@drawable/nuevaoferta"
            android:contentDescription="@string/todo1" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/imgnuevaoferta"
        tools:ignore="MissingConstraints"
        >
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/nombre_Oferta"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.328">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/ingrese_nombre_de_la_oferta"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:helperText="Nombre de la oferta" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/descripcion_Oferta"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:visibility="visible"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.328">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/describa_toda_la_descripcion_de_la_oferta"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:helperText="Descripcion" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/fechapubli_oferta"
            android:layout_width="375dp"
            android:layout_height="50dp"
            android:visibility="visible"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.328">

            <com.google.android.material.textfield.TextInputEditText
android:inputType="date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/fecha_de_cierre"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="16sp"
                app:helperText="12/12/9999" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnPublicar"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/fondoboton"
            android:text="@string/publicar"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="Publicar"
            android:layout_gravity="center"
            />


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>